# library_drf

./: db.sqlite3  pyproject.toml  requirements.txt
books/: tests.py  views.py
books/migrations/: 0001_initial.py
setup/: settings.py  urls.py
