[tool.poetry]
name = "library-drf"
version = "0.1.0"
description = ""
authors = ["CodeAkio <siqueira_2004@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.7"
black = "^24.4.2"
djangorestframework = "^3.15.2"
whitenoise = "^6.7.0"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
